--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-	<title>Order</title>
+	<title>Welcome</title>
 	<link rel="stylesheet" type="text/css" href="/styles/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="/styles/style_ticketsmarche.css">
 		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -72,7 +72,7 @@
 						<tbody>
 							<tr class="bg-blue-light color-gray-light">
 								<th scope="row" class="bg-blue-dark color-white">Name</th>
-								<td colspan="2">Belal Ahmed</td>
+								<td colspan="2">Youssef Ehab</td>
 							</tr>
 							<tr class="bg-blue-light color-gray-light">
 								<th scope="row" class="bg-blue-dark color-white">Order Date</th>
@@ -80,7 +80,7 @@
 							</tr>
 														<tr class="bg-blue-light color-gray-light">
 								<th scope="row" class="bg-blue-dark color-white">Total Paid</th>
-								<td colspan="2">0.00</td>
+								<td colspan="2">3500.00</td>
 							</tr>
 							<tr class="bg-blue-light color-gray-light">
 								<th scope="row" class="bg-blue-dark color-white">Tickets</th>
@@ -119,7 +119,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr><th scope='row'>DHB</th><td>Standing Invitation</td><td>1</td><td></td></tr>					</tbody>
+						<tr><th scope='row'>DHB</th><td>Standing Early Bird</td><td>1</td><td></td></tr>					</tbody>
 				</table>
             </div>
 			
@@ -143,7 +143,7 @@
 								<div class="card-body text-center p-2">
 																	<div class="card card-style bg-5">
 																		<!-- <div class="card-center text-center"><h1 class="color-white font-32">Thu 22nd Aug</h1>
-																			<p class="color-white boxed-text-l opacity-80 mb-0">Ticket will become active on Event date</p></div> -->
+																			<p class="color-white boxed-text-l opacity-80 mb-0">Early Bird will become active on Event date</p></div> -->
 																			<!-- <div class="card-body text-center p-4">
 																				<img src="qr_code.png" alt="QR Code" class="img-fluid mb-4">
 																			</div> -->
@@ -158,10 +158,10 @@
 																			</div>
 																	<h4 class="color-black text-uppercase font-900 mb-0">DHB</h4>
 																	<p class="under-heading color-black mb-0">Thu 22nd Aug 2024</p>
-																	<p class="under-heading color-black mb-0">Standing Invitation</p>
+																	<p class="under-heading color-black mb-0">Standing Early Bird</p>
 																	<p class="under-heading color-black font-900 mb-0 category">Standing</p>
-																	<p class="under-heading color-black font-900 mb-0 area">Standing Invitation</p>
-																	<p class="color-black mb-0 p-2">9201301306919</p>
+																	<p class="under-heading color-black font-900 mb-0 area">Standing Early Bird</p>
+																	<p class="color-black mb-0 p-2">9185341327439</p>
 																</div>
 																<div class="card-bottom text-center" style="position:relative">
 																	<a href="#" class="icon icon-xs rounded-xs color-white bg-highlight"  style="opacity:0.4;" title="Disabled">
@@ -221,7 +221,7 @@
 		
 				<!--<a href="www.ticketsmarche.com/" target="_blank">-->
 			<h1 class="px-3 font-28">Ticketsmarche</h1>
-			<p class="px-3 mt-n3 font-11 font-600 color-highlight">Belal Ahmed - belalahmedfekry@gmail.com</p> <!--"c_fname" & "c_lname" replace "fname" & "lname"-->
+			<p class="px-3 mt-n3 font-11 font-600 color-highlight">Youssef Ehab - youssef.ehab.fathy@gmail.com</p> <!--"c_fname" & "c_lname" replace "fname" & "lname"-->
 		<!--</a>-->
 		
 		<p class="text-uppercase font-10 color-theme font-600 px-3 mb-1">Navigation</p>
