--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							</tr>
 														<tr class="bg-blue-light color-gray-light">
 								<th scope="row" class="bg-blue-dark color-white">Total Paid</th>
-								<td colspan="2">7000.00</td>
+								<td colspan="2">3500.00</td>
 							</tr>
 							<tr class="bg-blue-light color-gray-light">
 								<th scope="row" class="bg-blue-dark color-white">Tickets</th>
@@ -119,7 +119,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr><th scope='row'>DHB</th><td>Back Stage Early Bird</td><td>1</td><td></td></tr>					</tbody>
+						<tr><th scope='row'>DHB</th><td>Standing Early Bird</td><td>1</td><td></td></tr>					</tbody>
 				</table>
             </div>
 			
@@ -158,9 +158,9 @@
 																			</div>
 																	<h4 class="color-black text-uppercase font-900 mb-0">DHB</h4>
 																	<p class="under-heading color-black mb-0">Thu 22nd Aug 2024</p>
-																	<p class="under-heading color-black mb-0">Back Stage Early Bird</p>
-																	<p class="under-heading color-black font-900 mb-0 category">Back Stage</p>
-																	<p class="under-heading color-black font-900 mb-0 area">Back Stage Early Bird</p>
+																	<p class="under-heading color-black mb-0">Standing Early Bird</p>
+																	<p class="under-heading color-black font-900 mb-0 category">Standing Stage</p>
+																	<p class="under-heading color-black font-900 mb-0 area">Standing Early Bird</p>
 																	<p class="color-black mb-0 p-2">9185341327439</p>
 																</div>
 																<div class="card-bottom text-center" style="position:relative">
